fix bug where bottom of drawer sometimes covered by ios safari bottom bar

--- a/example/example.css
+++ b/example/example.css
@@ -20,6 +20,8 @@ side-drawer {
 
 .drawer-sample-container {
   height: 100%;
+  display: flex;
+  justify-content: space-between;
   padding: 21px;
   font-size: 21px;
   display: flex;
